Adds support for python-client generation