@@ -13,8 +13,12 @@ def call(apiPath, version, groupId, artifactId, languages, Closure closure = nul
         modelPackage = 'model'
         apiPackage = 'api'
       }
-      sh "mvn -f generator-pom.xml ${mavenPhase} -Dspec_source=${apiPath} -Dversion=${version} -Dlanguage=${lang} -Dgroup_id=${groupId} -Dartifact_id=${artifactId} -Dpackage=${packageName} -Dmodel=${modelPackage} -Dapi=${apiPackage}"
-      sh "zip -r -q ${artifactId}_${lang}.zip target/generated-sources/openapi/"
+	  if (lang == 'python') {
+	    sh "_JAVA_OPTIONS=\"--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED\" mvn -f generator-pom.xml ${mavenPhase} -Dspec_source=${apiPath} -Dversion=${version} -Dlanguage=${lang} -Dgroup_id=${groupId} -Dartifact_id=${artifactId} -Dpackage=${packageName} -Dmodel=${modelPackage} -Dapi=${apiPackage} -DgeneratorEngine=handlebars"
+	  } else {
+		sh "mvn -f generator-pom.xml ${mavenPhase} -Dspec_source=${apiPath} -Dversion=${version} -Dlanguage=${lang} -Dgroup_id=${groupId} -Dartifact_id=${artifactId} -Dpackage=${packageName} -Dmodel=${modelPackage} -Dapi=${apiPackage}"
+      }
+	  sh "zip -r -q ${artifactId}_${lang}.zip target/generated-sources/openapi/"
       archiveArtifacts artifacts: "${artifactId}_${lang}.zip"
       if (closure != null) {
           closure()
